--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="main">
         <div class="inbox">
             <a href="https://www.youtube.com/@Not_A_Lazy_Dev/videos" target="_blank"><button class="one" onmouseenter="set('My youtube channel :', 'red')" onmouseleave="reset()"></button></a>
-            <a href="http://loginform.free.nf/" target="_blank"><button class="two" onmouseenter="set('My website :', 'dodgerblue')" onmouseleave="reset()"></button></a>
+            <a href="http://loginform.free.nf/" target="_self"><button class="two" onmouseenter="set('My website :', 'dodgerblue')" onmouseleave="reset()"></button></a>
             <h1 id="text">Hover over a button ...</h1>
         </div>
     </div>
